# rdma-example

./: .gitignore  CMakeLists.txt  README.md  ibv_test.c  rc_send_recv.c  setup_ibv.c  setup_roce.sh
include/: setup_ibv.h
include/util/: ibv_print_info.h
util/: ibv_print_info.c
